Telegraf for Telegram documentation completed.

--- a/website/static/site/css/site.css
+++ b/website/static/site/css/site.css
@@ -96,6 +96,7 @@ body {
     border: 1px solid #bbb;
     border-radius: 6px;
     text-decoration: none !important;
+    white-space: nowrap;
 }
 
 .inline-link:hover {
